# ai-series

./: .gitignore  pyproject.toml
.claude/agents/: audience-bored-detector-pressure-tests.md  audience-bored-detector.md  character-truth-keeper-pressure-tests.md  character-truth-keeper.md  incentive-cartographer-pressure-tests.md  incentive-cartographer.md  lore-realism-checker-pressure-tests.md  lore-realism-checker.md  philosophy-adversarial-pressure-tests.md  philosophy-adversarial.md  voice-differentiator-pressure-tests.md  voice-differentiator.md
.claude/skills/add-golden-example/: SKILL.md
.claude/skills/adversarial-review-pass/: SKILL.md
.claude/skills/consistency-check/: SKILL.md  pressure-tests.md
decisions/: D-001-bootstrap-architecture.md  D-002-spec-corrections-and-golden-plan.md
docs/: cost-estimate-pp1.md  extended-thinking-mechanism.md  log.md
docs/cowork/: prompt.md
docs/specs/: 2026-05-24-infrastructure-and-skills-design.md
golden/: README.md
tests/: __init__.py  conftest.py  test_common_artifact.py  test_common_frontmatter.py  test_common_reporter.py  test_concern_resolution_validator.py  test_consistency_check.py  test_critic_report_validator.py  test_frontmatter_validator.py  test_golden_freshness.py  test_voice_dissimilarity.py
tests/regression/: README.md
tools/: README.md  __init__.py  concern_resolution_validator.py  consistency_check.py  critic_report_validator.py  frontmatter_validator.py  golden_freshness.py  voice_dissimilarity.py
tools/_common/: __init__.py  artifact.py  frontmatter.py  reporter.py
(+63 files in other folders)
