[project]
name = "auto-ai-series-tools"
version = "0.1.0"
description = "Lint scripts for Auto-ai-series ПП1"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
]

[tool.setuptools.packages.find]
include = ["tools*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=tools --cov-report=term-missing --cov-fail-under=70"
